<resources>
    <string name="app_name">PDM3000</string>
    <string name="app_title">可移动式电缆局部放电检测系统</string>
    <string name="device_conn">设备检测</string>
    <string name="param_set">参数设置</string>
    <string name="data_read">数据读取</string>
    <string name="data_view">数据展示</string>
    <string name="pd_param_set">局放检测参数设置</string>
    <string name="pd_data_read">局放数据读取</string>
    <string name="pd_data_view">局放数据展示</string>
    <string name="pd_device_check">设备检测</string>
    <string name="file_copy">文件复制</string>
    <string name="file_view">文件浏览</string>
    <string name="device_list">蓝牙设备：</string>
    <string name="wifi_list">无线网络：</string>
    <string name="start_scan">开始扫描</string>
    <string name="stop_scan">停止扫描</string>
    <string name="open_ble">开启蓝牙</string>
    <string name="open_wifi">开启无线</string>
    <string name="connect">连接</string>
    <string name="connecting">连接中</string>
    <string name="disconn">断开</string>
    <string name="activate">激活</string>
    <string name="stop_afterS">%d秒后停止</string>
    <string name="line_name_">线路名称：</string>
    <string name="line_pos_">检测位置：</string>
    <string name="measure_time_">测量时间：</string>
    <string name="apply_change">应用修改</string>
    <string name="load_config">获取配置</string>
    <string name="cable_info">被测电缆信息：</string>
    <string name="interval_time_set">间歇工作时间设置：</string>
    <string name="frequency_band_set">检测频带设置：</string>
    <string name="freq_center">中心频点：</string>
    <string name="freq_bandwidth">频率带宽：</string>
    <string name="label_line_name">线路名称：</string>
    <string name="label_joint_name">接头名称：</string>
    <string name="label_sleep_time">间歇时间：</string>
    <string name="default_line_name">请输入线路名称</string>
    <string name="default_joint_name">请输入接头名称</string>
    <string name="default_interval_name">请输入间歇工作时间</string>
    <string name="btn_test">测试</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_test_image">FullscreenActivity</string>
    <string name="refresh">刷新</string>
    <string name="checkAll">全选</string>
    <string name="readData">读取数据</string>
    <string name="no_data_ext">当前没有数据!</string>
</resources>