<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textViewCountDown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/buttonScanBle"
        app:layout_constraintStart_toEndOf="@+id/buttonScanBle"
        app:layout_constraintTop_toTopOf="@+id/buttonScanBle" />

    <TextView
        android:id="@+id/textViewWifiList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:text="@string/wifi_list"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.12"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listviewDevices"
        app:layout_constraintVertical_bias="0.0" />

    <ListView
        android:id="@+id/listviewWifis"
        android:layout_width="0dp"
        android:layout_height="230dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="40dp"
        android:background="#E0E0D0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewWifiList" />

    <TextView
        android:id="@+id/textViewDeviceList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:text="@string/device_list"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonScanBle"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/open_ble"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/textViewDeviceList"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/buttonOpenWifi"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/textViewWifiList"
        app:layout_constraintTop_toBottomOf="@+id/listviewDevices" />

    <ListView
        android:id="@+id/listviewDevices"
        android:layout_width="0dp"
        android:layout_height="230dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="40dp"
        android:background="#E0E0D0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDeviceList" />

</androidx.constraintlayout.widget.ConstraintLayout>